# pi-line

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  line.md  pi.md  runner.md  worker.md
piline/: __init__.py  line.py  worker.py
src/piline/: __init__.py  line.py  pi.py  result.py  runner.py  worker.py
tests/: conftest.py  test_json.py  test_line.py  test_pi.py  test_runner.py  test_worker.py
tests/scripts/: echo_args.py  env_echo.py  fail.py  pass.py  slow.py  write_artefact.py
