[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-line"
version = "1.1.0"
description = "Zero-dependency parallel script runner."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Maximilian Todea", email = "demon.and.max@gmail.com"},
]
keywords = ["python", "automation", "pipeline", "devtools", "parallel", "task-runner", "process-pool", "zero-dependencies"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/importt-ant/pi-line"
Repository = "https://github.com/importt-ant/pi-line"
Issues = "https://github.com/importt-ant/pi-line/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["piline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/piline/__init__.py:__version__"]
build_command = "pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.changelog]
generate = false
